{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 12,
  "lineage": "7db37718-0d09-16be-9848-daa48470aec8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker-challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-033558be0aac13adc",
            "arn": "arn:aws:ec2:us-east-1:993337254516:instance/i-005493615c6ac1bef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005493615c6ac1bef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "projeto-ia",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a0a91056d8b34d18",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-52-23-174-132.compute-1.amazonaws.com",
            "public_ip": "52.23.174.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c6199c55fc1f358",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4e73d00b7a6f27b",
            "tags": {
              "Name": "instancia-docker-challenge"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a685982330409753"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_allow_access-challenge",
            "aws_subnet.Public_subnet",
            "data.aws_ami.ubuntu-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW_Challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993337254516:internet-gateway/igw-07411d9e2b42f438b",
            "id": "igw-07411d9e2b42f438b",
            "owner_id": "993337254516",
            "tags": {
              "Name": "Internet gateway Challenge"
            },
            "vpc_id": "vpc-06606dc27e5288cb8"
          },
          "dependencies": [
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Public_NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993337254516:network-acl/acl-0050bc5c9bdda26ac",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0050bc5c9bdda26ac",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "993337254516",
            "subnet_ids": [
              "subnet-0f4e73d00b7a6f27b"
            ],
            "tags": {
              "Name": "Public NACL"
            },
            "vpc_id": "vpc-06606dc27e5288cb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Public_subnet",
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07411d9e2b42f438b",
            "id": "r-rtb-0c1a8e6e30c3eae801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c1a8e6e30c3eae80",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW_Challenge",
            "aws_route_table.Public_RT",
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993337254516:route-table/rtb-0c1a8e6e30c3eae80",
            "id": "rtb-0c1a8e6e30c3eae80",
            "owner_id": "993337254516",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07411d9e2b42f438b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route table"
            },
            "vpc_id": "vpc-06606dc27e5288cb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05665942ec1eb6e35",
            "route_table_id": "rtb-0c1a8e6e30c3eae80",
            "subnet_id": "subnet-0f4e73d00b7a6f27b"
          },
          "dependencies": [
            "aws_route_table.Public_RT",
            "aws_subnet.Public_subnet",
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_access-challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993337254516:security-group/sg-0a685982330409753",
            "description": "Allow ssh and standard 80/8080 ports inbound and everything outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a685982330409753",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Allow Traffic SG Challenge",
            "name_prefix": "",
            "owner_id": "993337254516",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06606dc27e5288cb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993337254516:subnet/subnet-0f4e73d00b7a6f27b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f4e73d00b7a6f27b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993337254516",
            "tags": {
              "Name": "Subnet Publica"
            },
            "tags_all": {
              "Name": "Subnet Publica"
            },
            "vpc_id": "vpc-06606dc27e5288cb8"
          },
          "dependencies": [
            "aws_vpc.VPC_CHALLENGE"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_CHALLENGE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993337254516:vpc/vpc-06606dc27e5288cb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0857511ad170c3e9c",
            "default_route_table_id": "rtb-0f5ed431a6492e6ca",
            "default_security_group_id": "sg-073695669bef7137e",
            "dhcp_options_id": "dopt-50587d2b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06606dc27e5288cb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f5ed431a6492e6ca",
            "owner_id": "993337254516",
            "tags": {
              "Name": "VPC Challenge IA"
            },
            "tags_all": {
              "Name": "VPC Challenge IA"
            }
          }
        }
      ]
    }
  ]
}